# LibIPSM

./: .gitignore  CMakeLists.txt  Doxyfile  InterProcessCommunication.hpp  InterProcessComnmunication  InterProcessSharedMemory.hpp  LibIPSM.hpp  README.md  example.cpp  main.cpp  makefile
test/: intForkTest.cpp  structThreadTest.cpp
